Env/Dev/main.tf
module "network" {
  source = "../../modules/network"
  name   = var.name
  cidr   = var.vpc_cidr
  azs    = var.azs
  public_cidrs = var.public_cidrs
}

resource "aws_security_group" "ec2_sg" {
  name   = "${var.name}-ec2-sg"
  vpc_id = module.network.vpc_id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [var.admin_cidr]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port = 0
    to_port   = 0
    protocol  = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

module "ec2" {
  source                 = "../../modules/ec2"
  ami                    = var.ec2_ami
  instance_type          = var.instance_type
  subnet_id              = module.network.public_subnets[0]
  key_name               = var.ssh_key_name
  vpc_security_group_ids = [aws_security_group.ec2_sg.id]
}
